<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:key="@string/pref_extension_key"
        android:title="@string/pref_extension_title">

        <!--Data Channel Enable function , default is true-->
        <!--<CheckBoxPreference-->
            <!--android:key="@string/pref_enable_chat_room_key_key"-->
            <!--android:title="@string/pref_enable_chat_room_key_title"-->
            <!--android:dialogTitle="@string/pref_enable_chat_room_key_dlg"-->
            <!--android:defaultValue="@string/pref_enable_chat_room_key_default" />-->

        <CheckBoxPreference
            android:key="@string/pref_enable_channel_create_side_key"
            android:title="@string/pref_enable_channel_create_side_title"
            android:dialogTitle="@string/pref_enable_channel_create_side_dlg"
            android:defaultValue="@string/pref_enable_channel_create_side_default" />

        <EditTextPreference
            android:key="@string/pref_username_key"
            android:title="@string/pref_username_title"
            android:inputType="text"
            android:defaultValue="@string/pref_username_default"
            android:dialogTitle="@string/pref_username_dlg" />

        <EditTextPreference
            android:key="@string/pref_password_key"
            android:title="@string/pref_password_title"
            android:inputType="text"
            android:defaultValue="@string/pref_password_default"
            android:dialogTitle="@string/pref_password_dlg" />

    </PreferenceCategory>



    <PreferenceCategory
        android:key="@string/pref_miscsettings_key"
        android:title="@string/pref_miscsettings_title">

        <CheckBoxPreference
            android:key="@string/pref_cpu_usage_detection_key"
            android:title="@string/pref_cpu_usage_detection_title"
            android:dialogTitle="@string/pref_cpu_usage_detection_dlg"
            android:defaultValue="@string/pref_cpu_usage_detection_default" />

        <EditTextPreference
            android:key="@string/pref_room_server_url_key"
            android:title="@string/pref_room_server_url_title"
            android:inputType="text"
            android:defaultValue="@string/pref_room_server_url_default"
            android:dialogTitle="@string/pref_room_server_url_dlg" />

        <CheckBoxPreference
            android:key="@string/pref_displayhud_key"
            android:title="@string/pref_displayhud_title"
            android:dialogTitle="@string/pref_displayhud_dlg"
           android:defaultValue="@string/pref_displayhud_default" />
    </PreferenceCategory>




</PreferenceScreen>
