<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/contact_name_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/buttons_call_container"
        android:textSize="24sp"
        android:layout_margin="8dp"/>

    <LinearLayout
           android:id="@+id/buttons_call_container"
           android:orientation="horizontal"
        android:layout_marginBottom="34dp"
        android:layout_width="wrap_content"
           android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

       <ImageButton
           android:id="@+id/button_call_disconnect"
           android:background="@drawable/disconnect"
           android:contentDescription="@string/disconnect_call"
           android:layout_marginEnd="16dp"
           android:layout_width="48dp"
           android:layout_height="48dp"/>

       <ImageButton
           android:id="@+id/button_call_message"
           android:background="@drawable/message"
           android:contentDescription="@string/switch_camera"
           android:layout_marginEnd="8dp"
           android:layout_width="48dp"
           android:layout_height="48dp"
           android:cropToPadding="false" />

        <ImageButton
           android:id="@+id/button_call_file"
           android:background="@drawable/file"
           android:contentDescription="@string/disconnect_call"
           android:layout_width="48dp"
           android:layout_height="48dp"/>

        <ImageButton
            android:id="@+id/button_call_video"
            android:background="@drawable/video"
            android:contentDescription="@string/data_transfer"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/buttons_call_container"
            android:layout_toRightOf="@+id/buttons_call_container"
            android:layout_toEndOf="@+id/buttons_call_container" />
    </LinearLayout>

</RelativeLayout>
