<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/buttons_call_container"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        >

       <ImageButton
           android:id="@+id/button_call_message"
           android:background="@drawable/message"
           android:contentDescription="@string/switch_camera"
           android:layout_width="48dp"
           android:layout_height="48dp"
           android:cropToPadding="false" />

        <ImageButton
            android:id="@+id/button_call_disconnect"
            android:background="@drawable/power"
            android:contentDescription="@string/disconnect_call"
            android:layout_marginTop="30dp"

            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@+id/button_call_message"/>
        <ImageButton
           android:id="@+id/button_call_liveview"
           android:background="@drawable/camera_white"
           android:contentDescription="@string/disconnect_call"
            android:layout_marginTop="30dp"

            android:layout_width="48dp"
           android:layout_height="48dp"
            android:layout_below="@+id/button_call_disconnect"/>

        <ImageButton
            android:id="@+id/button_call_video"
            android:background="@drawable/video"
            android:contentDescription="@string/data_transfer"
            android:layout_marginTop="30dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@+id/button_call_liveview"/>

</LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        >

    <TextView
        android:id="@+id/contact_name_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:layout_margin="8dp"/>
    </LinearLayout>>
</RelativeLayout>
