<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
            <TextView
                android:id="@+id/textview_ds2status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="5dp"
                android:lines="1"
                android:maxLines="1"
                android:textSize="60px"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_centerHorizontal="true"
                android:text="DS2 Status"/>

            <ImageButton
                android:id="@+id/online_offline_button"
                android:layout_below="@+id/textview_ds2status"
                android:layout_centerHorizontal="true"
                android:background="@drawable/online_shadow"
                android:contentDescription="@string/remove_room_description"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"/>
    </RelativeLayout>
</LinearLayout>

    <ImageButton
        android:id="@+id/refresh_button"
        android:background="@drawable/refresh2"
        android:contentDescription="@string/remove_room_description"
        android:layout_width="30dp"
        android:layout_height="30dp"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageButton
        android:id="@+id/connect_button"
        android:background="@android:drawable/sym_action_call"
        android:contentDescription="@string/connect_description"
        android:layout_marginEnd="20dp"
        android:layout_width="48dp"
        android:layout_height="48dp"/>

    <TextView
        android:id="@+id/normal_mode_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:lines="1"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Normal Mode"/>
</LinearLayout>
TextView
    android:id="@+id/room_edittext_description"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:text="@string/room_description"/>
<EditText
    android:id="@+id/room_edittext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:singleLine="true"
    android:imeOptions="actionDone"/>




</LinearLayout>